<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="64dp"
        android:paddingVertical="32dp"
        android:text="Texto 1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="Texto 2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/noto_sans"
        android:textColor="@color/primary"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:gravity="end"
        android:text="@string/texto_2" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@android:color/holo_blue_light"
        android:text="@string/texto_2" />

    <EditText
        android:visibility="visible"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:visibility="visible"
        android:autofillHints="name"
        android:hint="@string/user"
        android:inputType="text|phone"
        android:imeOptions="actionSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clique_aqui"
        android:backgroundTint="@color/material_dynamic_neutral_variant70"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@android:color/holo_blue_light"
        android:text="@string/texto_2" />
</LinearLayout>